# dog-go-around

./: .gitignore  PYGAME_MIGRATION.md  PYGBAG_DEPLOYMENT.md  QUICKSTART.md  README.md  README.old.md  Step_1.md  index.html  main.py  pygbag.json  pyproject.toml  requirements.txt  run.py
game/: __init__.py  config.py  game.py
game/assets/: README.md
game/assets/models/: car.txt  track.txt
game/assets/sounds/: boost.txt  countdown.txt  drift.txt  engine.txt  music.txt
game/assets/textures/: asphalt.txt  grass.txt  sky_sunset.txt
game/core/: __init__.py  app.py  camera_rig.py  car.py  checkpoints.py  hud.py  physics.py  powerups.py  race.py  track.py  world.py
game/net/: __init__.py  client.py  messages.py  server.py  state_sync.py
game/tests/: test_net.py  test_physics.py
game/ui/: __init__.py  hud.py  lobby.py  menu.py  pause_menu.py  results.py
game/utils/: input_map.py  mathx.py  serialization.py  timing.py
src/: game.py
src/dog_go_around/: __init__.py  __main__.py  cli.py
src/dog_go_around/framework/: __init__.py  config.py  display_manager.py  scene.py  scene_manager.py  sound_manager.py
src/dog_go_around/framework/components/: button.py  health_bar.py  slider.py  title.py
src/dog_go_around/scenes/: demo.py  main_menu.py
src/entities/: spinning_cube.py
tests/: test_sound_manager.py
