[project]
name = "dog-go-around"
version = "0.1.0"
description = "A multiplayer racing game"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
    "websockets>=12.0",
    "msgpack>=1.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
]

[project.urls]
Homepage = "https://github.com/ToanLe147/dog-go-around"
Repository = "https://github.com/ToanLe147/dog-go-around"
Issues = "https://github.com/ToanLe147/dog-go-around/issues"

[project.scripts]
dog-go-around = "run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
